@@ -53,3 +53,4 @@ v1.1.0
 
 v1.1.1
   - Add a way to insert a subscription in the admin edit event
+  - Can no longer edit form fields if there is any subscription registered
